sass/_content.scss
body > .content {
    z-index: 4;
    position: relative;
    border-radius: 2px;
    background: white;
    // width: 100%;
    margin: 0 ($sidebar-width+$side-margin) 0 $side-margin !important;

    @media (max-width: $mobile-breakpoint) {
        margin-left: $side-margin-mobile !important;
        margin-right: $sidebar-width-mobile+$side-margin-mobile !important;
    }

    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.3);
    // overflow: hidden;
}

$tagline-height: 22px;

#siteTable {
    /* Needed to offset absolutely positioned nav buttons */
    padding-bottom: 45px;

    .thing {
        padding: 8px 20px;

        @media (max-width: $mobile-breakpoint) {
            padding: 8px;
        }
        margin: 0px;

        &:first-child {
            padding-top: 20px;
        }

        &:hover {
            background: #F2F2F2;
        }

        .entry {
            overflow: visible;
            position: relative;
            padding-right: 15px;
            display: flex;
            flex-wrap: wrap;

            // In case not flex
            margin-left: 150px;
            @media (max-width: $mobile-breakpoint) {
                margin-left: 120px;
            }

            .res & {
                padding: 4px 10px 10px 12px;
                border-radius: 3px;
            }

            .tagline {
                height: $tagline-height;
                line-height: $tagline-height;
            }

            /* Preview Content Button */
            .expando-button {
                height: 18px;
                margin-top: 0px;
                background: transparent;
                margin-bottom: 0px;
                cursor: pointer;
                opacity: 0.6;
                position: relative;

                &.image,
                &.video {
                    @include sprite($icon-play-video);
                    top: ($tagline-height - $icon-play-video-height) / 2;

                    &:hover {
                        @include sprite($icon-play-video-filled);
                    }
                }

                &.selftext {
                    @include sprite($icon-add-circle);
                    top: ($tagline-height - $icon-play-video-height) / 2 - 1;

                    &:hover {
                        @include sprite($icon-add-circle-filled);
                    }
                }
            }

            .expando {
                width: 100%;

                .usertext-body .md {
                    border: 1px solid #DDD;
                    border-radius: 0px;
                }
            }

            /* Form that shows up after you click report */
            .report-action-form,
            .post-sharing {
                background: $well-bg;
                border-radius: 0px;
                padding: $well-padding;
                max-width: none;
                border: $well-border;
                width: 100%;
                margin: 12px;
                margin-right: 65%;
            }
            .report-action-form {
                .reason-prompt {
                    padding-bottom: 1px;
                    display: inline-block;
                    padding-bottom: 2px;
                    margin-bottom: 8px;
                    border-bottom: 1px solid #DDD;
                    width: 80%;
                    font-weight: bold;

                    &:first-letter {
                        text-transform: uppercase;
                    }
                }

                label > input[type='radio'] {
                    margin-right: 12px;
                }
                button[type='submit'] {
                    margin-right: 6px;
                }
            }
            .post-sharing .post-sharing-main {
                pointer-events: none
            }
        }
    }
}
/* ... */

